--- a/question-service/package.json
+++ b/question-service/package.json
@@ -4,23 +4,24 @@
     "description": "",
     "main": "dist/server.js",
     "scripts": {
-      "build": "npx tsc",
-      "start": "node dist/server.js",
-      "dev": "nodemon src/server.ts",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "npx tsc",
+        "start": "node dist/server.js",
+        "dev": "nodemon src/server.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2"
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongoose-id-autoincrement": "^1.0.4"
     },
     "devDependencies": {
-      "@types/express": "^4.17.21",
-      "@types/node": "^20.12.7",
-      "nodemon": "^3.1.0",
-      "ts-node": "^10.9.2",
-      "typescript": "^5.4.5"
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.12.7",
+        "nodemon": "^3.1.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.4.5"
     }
-  }
+}
