--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -14,11 +14,13 @@
     "license": "ISC",
     "dependencies": {
         "dotenv": "^16.4.5",
-        "express": "^4.19.2",
+        "express": "^5.0.0",
         "jsonwebtoken": "^9.0.2",
+        "redis": "^4.7.0",
         "socket.io": "^4.7.5"
     },
     "devDependencies": {
+        "@socket.io/redis-adapter": "^8.3.0",
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.6",
