--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "fmt": "prettier --config .prettierrc ./**/*.ts --write",
+    "fmt": "prettier --config .prettierrc \"./**/*.{ts,tsx}\" --write",
+    "lint": "eslint --config .eslintrc.json \"./**/*.{ts,tsx}\" --fix",
     "prepare": "husky"
   },
   "lint-staged": {
     "**/*.ts": [
-      "prettier --config .prettierrc --write"
+      "prettier --config .prettierrc --write",
+      "eslint --config .eslintrc.json --fix"
     ]
   },
   "workspaces": [
@@ -16,8 +18,16 @@
     "frontend"
   ],
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4"
   }
 }
