--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "useTabs": false,
 	"tabWidth": 2,
 	"singleQuote": true,
+	"jsxSingleQuote": true,
 	"quoteProps": "as-needed",
 	"trailingComma": "es5",
 	"printWidth": 100
