--- a/backend/template/package.json
+++ b/backend/template/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "fmt": "prettier --config .prettierrc src --write",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "tsx src/lib/db/migrate.mts",
+    "db:migrate": "tsx drizzle.migrate.mts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
