--- a/users_service/package.json
+++ b/users_service/package.json
@@ -12,11 +12,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
-    "tsc": "^2.0.4"
+    "tsc": "^2.0.4",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
