--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         environment:
             - MONGODB_URI=${MONGODB_URI}
             - USER_SERVICE_PORT=${USER_SERVICE_PORT}
+            - JWT_SECRET=${JWT_SECRET}
         ports:
             - "5001:5001"
     question-service:
