--- a/gateway_service/package.json
+++ b/gateway_service/package.json
@@ -11,12 +11,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@grpc/grpc-js": "^1.11.2",
-    "@grpc/proto-loader": "^0.7.13",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "grpc": "^1.24.11",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.5.5",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
