--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "workspaces": [
     "backend/*",
-    "frontend"
+    "frontend",
+    "frontend/*"
   ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.5.0",
