Add hooks for templating code
Signed-off-by: SeeuSim <seeusimong@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "**/*.ts": [
+    "**/*.{ts,tsx}": [
       "prettier --config .prettierrc --write",
       "eslint --config .eslintrc.json --fix"
     ]
