split backend into microservices

--- a/package.json
+++ b/package.json
@@ -2,14 +2,9 @@
   "name": "cs3219-ay2425s1-project-g31",
   "version": "0.1.0",
   "description": "CS3219 Project (PeerPrep) - AY2425S1 Group: G31",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
   "license": "MIT",
   "workspaces": [
     "frontend",
-    "backend"
+    "backend/*"
   ]
 }
