--- a/backend/question-service/pyproject.toml
+++ b/backend/question-service/pyproject.toml
@@ -26,7 +26,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 line-length = 120
-select = [
+lint.select = [
     # Pyflakes
     "F",
     # Pycodestyle
@@ -34,12 +34,15 @@ select = [
     "W",
     # isort
     "I001",
+    # type annotations
+    "ANN001",
+    "ANN002"
 ]
 
 # Note: Ruff supports a top-level `src` option in lieu of isort's `src_paths` setting.
 src = ["question_service", "tests"]
 
-ignore = []
+lint.ignore = []
 
 # Exclude a variety of commonly ignored directories.
 exclude = [
@@ -63,14 +66,14 @@ exclude = [
     "node_modules",
     "venv",
 ]
-per-file-ignores = { }
+lint.per-file-ignores = { }
 
 # Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # Assume Python 3.12.
 target-version = "py312"
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
