--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "workspaces": [
     "backend/*",
-    "frontend",
     "frontend/*"
   ],
   "devDependencies": {
@@ -31,5 +30,8 @@
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "esbuild": "^0.23.1"
   }
 }
