--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -1,11 +1,52 @@
 {
-  "name": "user-service",
-  "version": "0.1.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT",
-  "description": ""
+    "name": "user-service",
+    "version": "0.1.0",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc",
+        "test": "jest",
+        "start": "npm run build && node dist/server.js",
+        "dev": "nodemon src/server.ts",
+        "prepare": "husky",
+        "lint": "lint-staged"
+    },
+    "author": "",
+    "license": "MIT",
+    "description": "",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.0",
+        "helmet": "^7.1.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.10.0",
+        "@types/cors": "^2.8.17",
+        "@types/dotenv": "^6.1.1",
+        "@types/express": "^4.17.21",
+        "@types/helmet": "^0.0.48",
+        "@types/node": "^22.5.5",
+        "@types/supertest": "^6.0.2",
+        "eslint": "^9.10.0",
+        "eslint-config-prettier": "^9.1.0",
+        "globals": "^15.9.0",
+        "husky": "^9.1.6",
+        "jest": "^29.7.0",
+        "lint-staged": "^15.2.10",
+        "nodemon": "^3.1.4",
+        "prettier": "3.3.3",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.5.0"
+    },
+    "lint-staged": {
+        "*.{js, jsx,ts,tsx}": [
+            "eslint --quiet --fix"
+        ],
+        "*.{json,js,ts,jsx,tsx,html}": [
+            "prettier --write --ignore-unknown"
+        ]
+    }
 }
