[#6] chore: add exclusion for dist and node module files for eslint

--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
         ],
         "*.{json,js,ts,jsx,tsx,html}": [
             "prettier --write --ignore-unknown"
+        ],
+        "ignore": [
+            "**/node_modules/**",
+            "**/dist/**"
         ]
     }
 }
