--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,6 +6,8 @@ services:
       context: ./gateway_service
     environment:
       - API_GATEWAY_PORT=${API_GATEWAY_PORT}
+      - USER_SERVICE_PORT=${USER_SERVICE_PORT}
+      - QUESTION_SERVICE_PORT=${QUESTION_SERVICE_PORT}
       - JWT_SECRET=${JWT_SECRET}
     ports:
       - ${API_GATEWAY_PORT}:${API_GATEWAY_PORT}
