--- a/gateway_service/package.json
+++ b/gateway_service/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.7",
