--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "scripts": {
+    "install-all": "npm install && run-p install-all:*",
+    "install-all:frontend": "cd frontend && npm install"
+  },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
