--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -13,10 +13,13 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
+        "class-validator": "^0.14.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
-        "helmet": "^7.1.0"
+        "helmet": "^7.1.0",
+        "mongoose": "^8.6.3",
+        "winston": "^3.14.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
