--- a/matchingService/package.json
+++ b/matchingService/package.json
@@ -11,7 +11,11 @@
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
     "@types/node": "^22.5.4",
+    "@types/uuid": "^10.0.0",
     "amqplib": "^0.10.4",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "uuid": "^10.0.0"
   }
 }
