feat: Dockerised matching service application

--- a/matchingService/docker-compose.yaml
+++ b/matchingService/docker-compose.yaml
@@ -6,3 +6,21 @@ services:
       - "15672:15672" # Dashboard port
     environment:
       RABBITMQ_NODE_PORT: 5672
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
+  matchingservice:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      - RABBITMQ_URL=amqp://rabbitmq:5672
+    container_name: matchingservice
+    command: ["node", "dist/index.js"]
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
