--- a/backend/user-service/.env.sample
+++ b/backend/user-service/.env.sample
@@ -6,4 +6,6 @@ PORT=3001
 ENV=PROD
 
 # Secret for creating JWT signature
-JWT_SECRET=you-can-replace-this-with-your-own-secret
+#
+# For dev environment, do not change this value
+JWT_SECRET=cs3219-ay2425s1-g40-user
