--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,9 +1,8 @@
 name: Lint
 
 on:
-  push:
-    branches:
-      - dev
+  # push:
+  #   branches:
   pull_request:
     branches:
       - dev
@@ -27,6 +26,8 @@ jobs:
         id: linter
         uses: super-linter/super-linter@v7.1.0
         env:
+          LINTER_RULES_PATH: config/lint
+          JAVA_FILE_NAME: custom_checks.xml
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_JAVASCRIPT_ES: true
           VALIDATE_JSX: true
