--- a/backend/userService/package.json
+++ b/backend/userService/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.5",
+    "prettier": "3.3.3",
     "typescript": "^5.6.2"
   }
 }
