chore: remove redundant scripts in question service

--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "question-service",
-  "version": "0.1.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT",
-  "description": ""
+    "name": "question-service",
+    "version": "0.1.0",
+    "main": "index.js",
+    "scripts": {},
+    "author": "",
+    "license": "MIT",
+    "description": ""
 }
