feat: add turborepo build system and turbo scripts

--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "build": "tsc",
         "test": "jest",
+        "lint": "eslint --fix && prettier --write .",
         "start": "npm run build && node dist/server.js",
         "dev": "nodemon src/server.ts"
     },
