--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "tsc",
         "test": "jest",
-        "lint": "eslint --fix && prettier --write .",
+        "lint": "eslint --fix --no-error-on-unmatched-pattern && prettier --write --ignore-unknown .",
         "start": "npm run build && node dist/server.js",
         "dev": "nodemon src/server.ts"
     },
