--- a/matching-service/docker-compose.yml
+++ b/matching-service/docker-compose.yml
@@ -6,10 +6,12 @@ services:
     command: redis-server --save 30 1 --loglevel warning
     volumes:
       - ./redis-data:/data
-    # ports not exposed as external access not required
+    # expose ports when testing
+    # ports:
+    #   - "6379:6379"
 
   g38-matching-service:
-    image: delishad21/g38-matching-service:latest
+    image: g38-matching-service:latest
     env_file:
       - .env  # Loads environment variables from .env file
     ports:
