--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "dist/server.js",
     "scripts": {
-        "build": "npx tsc",
+        "build": "npx tsc && npm run copy",
+        "copy": "copyfiles -u 1 src/**/*.lua dist/",
         "start": "node dist/server.js",
         "dev": "nodemon src/server.ts",
         "test": "jest"
@@ -15,6 +16,8 @@
     "dependencies": {
         "dotenv": "^16.4.5",
         "express": "^5.0.0",
+        "fs": "^0.0.1-security",
+        "ioredis": "^5.4.1",
         "jsonwebtoken": "^9.0.2",
         "redis": "^4.7.0",
         "socket.io": "^4.7.5"
@@ -25,6 +28,7 @@
         "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.12.7",
+        "copyfiles": "^2.4.1",
         "jest": "^29.7.0",
         "nodemon": "^3.1.0",
         "socket.io-client": "^4.7.5",
