--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "yarn" # or "npm" depending on what you use
+          cache: "npm" 
 
       - name: Detect package manager
         id: detect-package-manager
