--- a/question-service/package.json
+++ b/question-service/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongoose": "^8.6.2",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.5.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
