--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,18 @@
 version: "3"
 
 services:
+  frontend:
+    build:
+      context: ./peerprep_fe
+      dockerfile: Dockerfile.dev
+    volumes:
+      - ./peerprep_fe:/app
+      - /app/node_modules
+    environment:
+      - FRONTEND_PORT=${FRONTEND_PORT}
+    ports:
+      - "3000:3000"
+
   gateway-service:
     build:
       context: ./gateway_service
@@ -29,6 +41,7 @@ services:
       - JWT_SECRET=${JWT_SECRET}
     ports:
       - "5001:5001"
+
   question-service:
     build:
       context: ./question_service
