--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -22,6 +22,7 @@
         "winston": "^3.14.2"
     },
     "devDependencies": {
+        "@testcontainers/mongodb": "^10.13.1",
         "@types/cors": "^2.8.17",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^4.17.21",
