--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "mongoose-id-autoincrement": "^1.0.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7"
   }
 }
