Link fe to api gateway

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,6 +10,7 @@ services:
       - /app/node_modules
     environment:
       - FRONTEND_PORT=${FRONTEND_PORT}
+      - API_GATEWAY_PORT=${API_GATEWAY_PORT}
     ports:
       - "3000:3000"
 
