--- a/peerprep_fe/package.json
+++ b/peerprep_fe/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/env": "^14.2.12",
+    "dotenv": "^16.4.5",
     "next": "14.2.11",
     "next-themes": "^0.3.0",
     "react": "^18",
