Update docker file

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,18 @@
 version: "3"
 
 services:
+  frontend:
+    build:
+      context: ./peerprep_fe
+    volumes:
+      - ./peerprep_fe:/app
+      - /app/node_modules
+    environment:
+      - FRONTEND_PORT=${FRONTEND_PORT}
+      - API_GATEWAY_PORT=${API_GATEWAY_PORT}
+    ports:
+      - "${FRONTEND_PORT}:${FRONTEND_PORT}"
+
   gateway_service:
     build:
       context: ./gateway_service
