--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -13,6 +13,7 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "class-validator": "^0.14.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
@@ -23,6 +24,7 @@
     },
     "devDependencies": {
         "@testcontainers/mongodb": "^10.13.1",
+        "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^4.17.21",
