--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server"
-    },
+  },
   "author": "Group 26",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.2",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0"
   }
