--- a/backend/users-service/Dockerfile
+++ b/backend/users-service/Dockerfile
@@ -1,5 +1,7 @@
-# Use an official Node.js runtime as the base image
-FROM node:18-alpine
+#################
+## DEVELOPMENT ##
+#################
+FROM node:18-alpine AS development
 
 # Set the working directory in the container
 WORKDIR /app
@@ -13,8 +15,33 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
+# Built the app to /dist folder
+RUN npm run build
+
 # Expose the port the app runs on
 EXPOSE 4000
 
-# Start the application
-CMD ["npm", "start"]
+################
+## PRODUCTION ##
+################
+FROM node:18-alpine AS production
+
+# Set node environment to production
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy only the necessary files from the previous build stage
+COPY --from=development /peerprep/app/dist ./dist
+COPY package*.json ./
+
+# Install production dependencies only
+RUN npm ci --only=production
+
+# Expose the port the app runs on
+EXPOSE 4000
+
+# Run the main file
+CMD ["node", "dist/main"]
