--- a/backend/user/package.json
+++ b/backend/user/package.json
@@ -16,14 +16,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "drizzle-orm": "^0.33.0",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "pino": "^9.4.0",
     "pino-http": "^10.3.0",
     "postgres": "^3.4.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.5",
     "drizzle-kit": "^0.24.2",
     "nodemon": "^3.1.4",
