--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,10 +38,23 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.23
-      - name: Build backend
-        run: |
-          cd peer-prep-be
-          go build -o ./src ./src
+#      - name: Build backend using Docker
+#        run: |
+#          cd peer-prep-be
+#          docker build -t peer-prep-backend:latest .
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{vars.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/arm64, linux/adm64
+          push: true
+          tags: ${{vars.DOCKER_USERNAME}}/${{github.event.repository.name}}:latest
       # - name: Test backend
       #   run: |
       #     cd peer-prep-be
