--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,14 +41,14 @@ jobs:
       - name: Build backend using Docker
         run: |
           cd peer-prep-be
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/peer-prep-backend:latest .
+          docker build -t aidenlyt/peer-prep-backend:latest .
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{vars.DOCKER_USERNAME}}
           password: ${{secrets.DOCKERHUB_TOKEN}}
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/peer-prep-backend:latest
+        run: docker aidenlyt/push peer-prep-backend:latest
 #      - name: Set up Docker Buildx
 #        uses: docker/setup-buildx-action@v3
 #      - name: Build and push
