--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -55,7 +55,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           file: ./peer-prep-be/Dockerfile
-          platforms: linux/arm64, linux/adm64
+          platforms: linux/arm64, linux/amd64
           push: true
           tags: ${{vars.DOCKER_USERNAME}}/${{github.event.repository.name}}:latest
       # - name: Test backend
