--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,8 +49,8 @@ jobs:
           password: ${{secrets.DOCKERHUB_TOKEN}}
 #      - name: Push Docker image
 #        run: docker push peer-prep-backend:latest
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
