--- a/backend/user/package.json
+++ b/backend/user/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "drizzle-orm": "^0.33.0",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.0",
     "jsonwebtoken": "^9.0.2",
     "pino": "^9.4.0",
     "pino-http": "^10.3.0",
