--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,6 +28,21 @@ jobs:
         run: npm run build --if-present
       - name: Run tests
         run: npm test -- --watch=false --browsers=ChromeHeadless
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{vars.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: ./peer-prep-fe
+          file: ./peer-prep-fe/Dockerfile
+          platforms: linux/arm64, linux/amd64
+          push: true
+          tags: ${{vars.DOCKER_USERNAME}}/${{github.event.repository.name}}:latest
 
   build-backend:
     runs-on: ubuntu-latest
