--- a/backend/question/docker-compose.yml
+++ b/backend/question/docker-compose.yml
@@ -19,19 +19,19 @@ services:
     restart: unless-stopped
 
   express:
-    image: "question-express"
-    container_name: "question-express"
+    image: 'question-express'
+    container_name: 'question-express'
     build:
       context: ./
       dockerfile: ./express.Dockerfile
       target: build
     ports:
-      - "8002:8001"
+      - '8002:8001'
     command: node dist/index.js
     depends_on:
       postgres:
         condition: service_started
-
+        restart: true
 
 volumes:
   question-db-docker:
