--- a/backend/user/package.json
+++ b/backend/user/package.json
@@ -21,6 +21,7 @@
     "drizzle-orm": "^0.33.0",
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "pino": "^9.4.0",
     "pino-http": "^10.3.0",
