--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "frontend/*"
   ],
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.56.1",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
