--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -19,7 +19,10 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
         "helmet": "^7.1.0",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.6.3",
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
         "winston": "^3.14.2"
     },
     "devDependencies": {
@@ -30,7 +33,10 @@
         "@types/express": "^4.17.21",
         "@types/helmet": "^0.0.48",
         "@types/jest": "^29.5.13",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^22.5.5",
+        "@types/passport": "^1.0.16",
+        "@types/passport-local": "^1.0.38",
         "@types/supertest": "^6.0.2",
         "globals": "^15.9.0",
         "jest": "^29.7.0",
