chore(workspace): Configure workspace monorepo for frontend
Signed-off-by: SeeuSim <seeusimong@gmail.com>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "workspaces": [
     "backend/*",
-    "frontend/*"
+    "frontend"
   ],
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.56.1",
