Fix id bug and update readme

--- a/backend/question-service/.env.example
+++ b/backend/question-service/.env.example
@@ -1,1 +1,3 @@
-DATABASE_URI=mongodb+srv://admin:g26password@peerprep.xvavl.mongodb.net/?retryWrites=true&w=majority&appName=PeerPrep
+MONGODB_USERNAME=admin
+MONGODB_PASSWORD=g26password
+MONGODB_ENDPOINT=peerprep.xvavl.mongodb.net
