Add proficiency and display name field to user profile

--- a/UserService/user-service/.env
+++ b/UserService/user-service/.env
@@ -6,4 +6,4 @@ PORT=3001
 ENV=PROD
 
 # Secret for creating JWT signature
-# JWT_SECRET=you-can-replace-this-with-your-own-secret
+JWT_SECRET=altheachua
