--- a/backend/api-gateway/.env.sample
+++ b/backend/api-gateway/.env.sample
@@ -1,2 +1,2 @@
-QUESTION_SERVICE_DOMAIN=http://question-service:8001
+QUESTION_SERVICE_DOMAIN=http://question-app:8001
 USER_SERVICE_DOMAIN=http://user-app:8003
