--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
+# API Gateway
+QUESTION_SERVICE_DOMAIN=http://question-app:8001
+USER_SERVICE_DOMAIN=http://user-app:8003
+
+# Question Service
 MONGODB_URI=
 MONGODB_NAME=
+
+# User Service
+JWT_SECRET=you-can-replace-this-with-your-own-secret
+DB_CLOUD_URI=
+DB_LOCAL_URI=mongodb://user-service-db:27017/peerprepUserServiceDB
+PORT=8003
+ENV=DEV # or PROD to use cloud URI
