PEER-250 Cleanup code and configs
Signed-off-by: SeeuSim <seeusimong@gmail.com>

--- a/backend/user/docker-compose.yml
+++ b/backend/user/docker-compose.yml
@@ -1,11 +1,10 @@
 services:
   postgres:
     hostname: postgres
-    image: "user-db"
+    image: postgres:16.4
     container_name: "user_db"
     build:
       context: ./src/lib/db
-      dockerfile: ./postgres.Dockerfile
     environment:
       POSTGRES_DB: "User"
       POSTGRES_USER: "user"
