--- a/backend/user/docker-compose.yml
+++ b/backend/user/docker-compose.yml
@@ -1,36 +1,42 @@
+# Command: docker-compose --env-file .env.local up -d
+
 services:
-  postgres:
-    hostname: postgres
+  user-db:
+    hostname: "user-db"
     image: postgres:16.4
-    container_name: "user_db"
+    container_name: "user-db"
     build:
       context: ./src/lib/db
-    environment:
-      POSTGRES_DB: "User"
-      POSTGRES_USER: "user"
-      POSTGRES_PASSWORD: "user"
-      PGDATA: "/data/user-db"
+    env_file:
+      - ./.env.local
     volumes:
-       - "user-db-docker:/data/user-db"
+      - "user-db-docker:${PGDATA}"
       #  - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
-      - "5431:5432"
+      - "${EXPRESS_DB_PORT}:5432"
     restart: unless-stopped
 
-  express:
+  user-express:
     image: "user-express"
     container_name: "user-express"
     build:
       context: ./
       dockerfile: ./express.Dockerfile
       target: build
+      args: 
+        # For building with the correct env vars
+        - env=${EXPRESS_ENV}
     ports:
       - "9001:8001"
     command: node dist/index.js
+    env_file:
+      - ./.env.local
+    environment:
+      # Docker Compose Specific
+      - EXPRESS_DB_HOST=user-db
+      - EXPRESS_DB_PORT=5432
     depends_on:
-      postgres:
-        condition: service_started
-        restart: true
+      - user-db
   
 volumes:
   user-db-docker:
