--- a/backend/question/docker-compose.yml
+++ b/backend/question/docker-compose.yml
@@ -29,15 +29,14 @@ services:
     ports:
       - "9002:8001"
     command: node dist/index.js
+    env_file:
+      - ./.env.local
     environment:
       # Docker Compose Specific
       - EXPRESS_DB_HOST=question-db
       - EXPRESS_DB_PORT=5432
-      # Env File vars
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     depends_on:
       - question-db
+      
 volumes:
   question-db-docker:
