--- a/backend/user/package.json
+++ b/backend/user/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts | pino-pretty",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "dev": "env-cmd -f .env.local nodemon src/index.ts | pino-pretty",
+    "build": "env-cmd -f .env.local tsc && tsc-alias",
+    "start": "env-cmd -f .env.local node dist/index.js",
+    "build:prod": "env-cmd -f .env.prod tsc && tsc-alias",
+    "start:prod": "env-cmd -f .env.local node dist/index.js",
+    "db:generate": "env-cmd -f .env.local drizzle-kit generate",
+    "db:migrate": "env-cmd -f .env.local tsx drizzle.migrate.ts",
+    "db:inspect": "env-cmd -f .env.local drizzle-kit studio",
     "fmt": "prettier --config .prettierrc src --write",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "tsx drizzle.migrate.mts",
-    "db:inspect": "drizzle-kit studio",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +21,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "drizzle-orm": "^0.33.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
@@ -40,6 +43,7 @@
     "pino-pretty": "^11.2.2",
     "regenerator-runtime": "^0.14.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0"
   }
 }
