Fix POST causing SEGSEGV
Apparently bcrypt library cannot run on Docker's architecture. Change
bcrypt to bcryptjs for compatibility.

--- a/services/user-service/Dockerfile
+++ b/services/user-service/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install
 COPY . .
-EXPOSE 3001
+EXPOSE ${USER_SERVICE_PORT}
 
 CMD ["npm", "start"]
