document sample env for using cloud db

--- a/backend/user-service/.env.sample
+++ b/backend/user-service/.env.sample
@@ -1,4 +1,4 @@
-DB_CLOUD_URI=<CONNECTION_STRING>
+DB_CLOUD_URI=mongodb+srv://dbUser:<password>@cs3219-g40-cluster.vkb4f.mongodb.net/UserServiceDb
 DB_LOCAL_URI=mongodb://127.0.0.1:27017/peerprepUserServiceDB
 PORT=3001
 
@@ -6,4 +6,5 @@ PORT=3001
 ENV=PROD
 
 # Secret for creating JWT signature
-JWT_SECRET=you-can-replace-this-with-your-own-secret
+# do not change, if using prod
+JWT_SECRET=cs3219ay2425-s1-g40-jwt-signature
