PEER-251 Add makefile and auth checker route
Signed-off-by: SeeuSim <seeusimong@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,5 +48,8 @@ services:
 
 volumes:
   user-db-docker:
+    external: true
   collab-db-docker:
+    external: true
   question-db-docker:
+    external: true
