updated .env.sample to include user service url

--- a/question-service/.env.sample
+++ b/question-service/.env.sample
@@ -7,3 +7,5 @@ ENV=PROD
 
 # Secret for creating JWT signature
 JWT_SECRET=you-can-replace-this-with-your-own-secret
+
+USER_SERVICE_URL=<CONNECTION_STRING>
