--- a/peerprep-fe/package.json
+++ b/peerprep-fe/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3000 -H 0.0.0.0",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pre-commit": "pnpm lint"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
