--- a/question-service/package.json
+++ b/question-service/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky"
+    "pre-commit": "pnpm format && git add -u"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +28,6 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.6.1",
-    "husky": "^9.1.6",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
