--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,40 +10,40 @@ on:
 
 env:
   NODE_VERSION: "16"
-  COLLABORATION_SERVICE_URL: "http://localhost:8001/api"
+  # COLLABORATION_SERVICE_URL: "http://localhost:8001/api"
   MATCHING_SERVICE_URL: "http://localhost:8002/api"
   QUESTION_SERVICE_URL: "http://localhost:8003/api"
   # USER_SERVICE_URL: "http://localhost:8004"
 
 jobs:
-  collaboration_service:
-    runs-on: ubuntu-latest
-    name: Collaboration Service
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # collaboration_service:
+  #   runs-on: ubuntu-latest
+  #   name: Collaboration Service
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
 
-      - name: Install dependencies
-        working-directory: ./collaboration-service
-        run: npm install
+  #     - name: Install dependencies
+  #       working-directory: ./collaboration-service
+  #       run: npm install
 
-      - name: Build the service
-        working-directory: ./collaboration-service
-        run: npm run build
+  #     - name: Build the service
+  #       working-directory: ./collaboration-service
+  #       run: npm run build
 
-      - name: Start the service
-        working-directory: ./collaboration-service
-        run: |
-          nohup npm run start & sleep 5
-          curl --fail ${{ env.COLLABORATION_SERVICE_URL }} || exit 1
+  #     - name: Start the service
+  #       working-directory: ./collaboration-service
+  #       run: |
+  #         nohup npm run start & sleep 5
+  #         curl --fail ${{ env.COLLABORATION_SERVICE_URL }} || exit 1
 
-      - name: Stop the service
-        run: pkill node
+  #     - name: Stop the service
+  #       run: pkill node
 
   matching_service:
     runs-on: ubuntu-latest
