--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "cs3219-ay2425s1-project-g31",
     "version": "0.1.0",
     "description": "CS3219 Project (PeerPrep) - AY2425S1 Group: G31",
+    "author": "CS3219 AY2024S1 Group 31",
     "license": "MIT",
     "workspaces": [
         "frontend",
