--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -1,7 +1,9 @@
 {
     "name": "question-service",
+    "description": "Question Service for PeerPrep, responsible for maintaining a question repository.",
+    "author": "CS3219 AY2024S1 Group 31",
     "version": "0.1.0",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
         "build": "tsc",
         "test": "jest",
@@ -9,9 +11,7 @@
         "start": "npm run build && node dist/server.js",
         "dev": "nodemon src/server.ts"
     },
-    "author": "",
     "license": "MIT",
-    "description": "",
     "dependencies": {
         "class-validator": "^0.14.1",
         "cors": "^2.8.5",
