--- a/k8s/question-service.yml
+++ b/k8s/question-service.yml
@@ -20,9 +20,15 @@ spec:
       containers:
       - name: question-svc
         image: asia-southeast1-docker.pkg.dev/cs3219-g11-peerprep/cs3219-g11-repo/question-svc:latest
+        # imagePullPolicy: Never # only used for local builds
         ports:
         - containerPort: 4001
+        envFrom:
+        - configMapRef:
+            name: question-service-config
+      dnsPolicy: ClusterFirst
 ---
+# This is an internal service, not exposed
 apiVersion: v1
 kind: Service
 metadata:
@@ -30,7 +36,7 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - port: 80
+    - port: 4001
       targetPort: 4001
   selector:
     type: backend
