[#66] feat: move tsconfig into shared package

--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -30,6 +30,7 @@
     },
     "devDependencies": {
         "@repo/eslint-config": "*",
+        "@repo/typescript-config": "*",
         "@testcontainers/mongodb": "^10.13.1",
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
