--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "prepare": "husky || true"
     },
     "devDependencies": {
+        "@repo/eslint-config": "*",
+        "@repo/typescript-config": "*",
         "husky": "^9.1.6",
         "lint-staged": "^15.2.10",
         "prettier": "^3.3.3",
