--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "@repo/eslint-config": "*",
+        "@repo/typescript-config": "*",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
