[#66] fix: resolve build issues relating to paths

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,7 +5,11 @@
             {
                 "name": "next"
             }
-        ]
+        ],
+        "paths": {
+            "@/*": ["./*"],
+            "@/fonts": ["./styles/fonts"]
+        }
     },
     "include": ["next-env.d.ts", "next.config.js", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
     "exclude": ["node_modules", "**/*.test.ts", "**/*.html"]
